# openCVTest

./: README.md
app/: CMakeCache.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wma/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_wma_opencvtest_MainActivity.h  native-lib.cpp
app/src/main/dlib/: CMakeLists.txt  newdefine.h  serialize.h
app/src/main/dlib/gui_core/: gui_core_kernel_2.cpp  gui_core_kernel_2.h
app/src/main/dlib/image_transforms/: interpolation.h
app/src/main/dlib/statistics/: running_gradient.h
app/src/main/java/com/example/wma/opencvtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/wma/opencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
